--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -64,7 +64,7 @@
     </div>
     <br>
     <h5 class="text-center">What Can I do?</h5>
-    <p class="text-center">lioorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis nobis optio debitis beatae vitae asperiores animi quas sed voluptas
+    <p class="text-center"> ipsum dolor sit amet consectetur adipisicing elit. Perferendis nobis optio debitis beatae vitae asperiores animi quas sed voluptas
          blanditiis sunt, tempore officiis laborum, ipsa, aut illo? Repellendus, officia explicabo?Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum magni optio aperiam asperiores, corrupti est minima at sed maxime assumenda natus magnam voluptatum adipisci in neque, ipsum rem? Sapiente,
          quaerat.</p>
   </div>
