--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -7,7 +7,7 @@
     <div class="row">
       <div class="col-md-6">
         <div class="sottocontenitore">
-          <img class="esagonale" src="/assets/img/skills.png">
+          <img class="esagonale" src="assets/img/skills.png">
         </div>
       </div>
       <div class="col-md-6">
