--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -4,7 +4,7 @@
     <p>Hai qualche domanda da farmi o vuoi collaborare con me?</p>
   </div>
   <div class="box">
-    <img src="/assets/img/message.png">&nbsp;
+    <img src="assets/img/message.png">&nbsp;
     <a href="mailto:f.papagno94@gmail.com">
       f.papagno94@gmail.com</a>
   </div>
@@ -12,9 +12,9 @@
 
 <footer class="social">
   <div class="box">
-    <img src="/assets/img/linkedin.png">&nbsp;
-    <img src="/assets/img/instagram.png">&nbsp;
-    <img src="/assets/img/facebook.png">&nbsp;
+    <img src="assets/img/linkedin.png">&nbsp;
+    <img src="assets/img/instagram.png">&nbsp;
+    <img src="assets/img/facebook.png">&nbsp;
   </div>
 </footer>
 
