--- a/src/app/prima-parte/prima-parte.component.scss
+++ b/src/app/prima-parte/prima-parte.component.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  background: url("/assets/img/sfondoportfolio.gif");
+  background: url(/assets/img/sfondoportfolio.gif);
   height: 100vh;
   color:white;
   .centered{
