--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<section class="contenitore contact">
+<section class="contenitore contact" id="contacts">
   <div class="box">
     <h3>CONTACTS</h3>
     <p>Hai qualche domanda da farmi o vuoi collaborare con me?</p>
