--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,10 +16,10 @@
             <a class="nav-link " (click)="scroll('skills')">SKILLS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">PROJECT</a>
+            <a class="nav-link"  (click)="scroll('projects')">PROJECT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">CONTACT</a>
+            <a class="nav-link"  (click)="scroll('contacts')">CONTACT</a>
           </li>
         </ul>
       </div>
