--- a/src/app/prima-parte/prima-parte.component.css
+++ b/src/app/prima-parte/prima-parte.component.css
@@ -10,7 +10,7 @@
       -ms-flex-pack: center;
           justify-content: center;
   text-align: center;
-  background: url("/assets/img/sfondoportfolio.gif");
+  background-image: url("/img/sfondoportfolio.gif");
   height: 100vh;
   color: white;
 }
