--- a/src/app/prima-parte/prima-parte.component.html
+++ b/src/app/prima-parte/prima-parte.component.html
@@ -1,5 +1,5 @@
 
-<div class="contenitore">
+<div class="contenitore" style="background-image: url('assets/img/sfondoportfolio.gif');">
   <div class="centered">
     <h1>Ciao, mi chiamo <span>Filippo Papagno</span><br>Sono uno Junior Full-Stack Web Developer</h1>
     <button type="button" class="btn btn-outline-secondary"(click)="scroll('about')">Scopri di più</button>
