Modifica descrizione Skills e inserimento pointer

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -5,6 +5,7 @@ nav{
     .nav-item{
       a{
         color:white;
+        cursor: pointer;
         &:hover{
           color:#04c2c9;
         }
