--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -64,9 +64,10 @@
     </div>
     <br>
     <h5 class="text-center">What Can I do?</h5>
-    <p class="text-center"> ipsum dolor sit amet consectetur adipisicing elit. Perferendis nobis optio debitis beatae vitae asperiores animi quas sed voluptas
-         blanditiis sunt, tempore officiis laborum, ipsa, aut illo? Repellendus, officia explicabo?Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum magni optio aperiam asperiores, corrupti est minima at sed maxime assumenda natus magnam voluptatum adipisci in neque, ipsum rem? Sapiente,
-         quaerat.</p>
+    <p class="text-center">Sono in grado di costruire da zero, siti web senza l'utilizzo di framework quindi solo con HTML,CSS e Javascript.
+      Attualmente mi sto specializzando sull'utilizzo di Angular e .NET considerando queste due tecnologie le migliori da utilizzare per la creazione di Web Application dinamiche e cross-platform.
+      Avendo delle basi molto forti, in futuro voglio essere in grado di utilizzare la maggior parte dei linguaggi di programmazione in particolare Pyton e C# con il quale già sto lavorando per l'utilizzo di .NET.
+    </p>
   </div>
 
 </section>
