--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -18,6 +18,9 @@ nav{
     }
   }
 }
+.navbar-light .navbar-toggler-icon{
+  background-image: url("https://img.icons8.com/office/16/000000/menu--v1.png");
+}
 @media screen and (max-width:768px) {
   nav{
     .navbar-collapse{
