Modifiche padding e HTML title

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   padding-top: 40px;
+  padding-bottom: 10px;
   h3{
     color:#444649;
     font-weight: 700;
