--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,7 @@
       -ms-flex-align: center;
           align-items: center;
   padding-top: 40px;
+  padding-bottom: 10px;
 }
 
 .contenitore h3 {
