--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -12,7 +12,7 @@
 
 <footer class="social">
   <div class="box">
-    <img src="assets/img/linkedin.png">&nbsp;
+    <a href="https://www.linkedin.com/in/papagno-filippo/" target="_blank"><img src="assets/img/linkedin.png"></a>&nbsp;
     <img src="assets/img/instagram.png">&nbsp;
     <img src="assets/img/facebook.png">&nbsp;
   </div>
