Aggiunta finestre modali su projects e bottone x tornare su

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,7 @@
 <section class="contenitore contact" id="contacts">
+  <div class="contenitore-bottone">
+    <button type="button" class="btn btn-outline-primary" (click)="tornaSu()"><img src="assets/img/up-arrow.png"></button>
+  </div>
   <div class="box">
     <h3>CONTACTS</h3>
     <p>Hai qualche domanda da farmi o vuoi collaborare con me?</p>
