--- a/src/styles.css
+++ b/src/styles.css
@@ -15,8 +15,17 @@
 
 .contenitore h3 {
   color: #444649;
-  font-weight: 700;
+  font-weight: 500;
   text-decoration: underline;
+}
+
+.contenitore-bottone {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .container {
