--- a/src/styles.scss
+++ b/src/styles.scss
@@ -68,7 +68,12 @@
   }
   .contenitore{
     h1{
-      font-size:20px
+      font-size:18px
+    }
+  }
+  .box{
+    p{
+      font-size: 12px;
     }
   }
 }
