--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -16,4 +16,8 @@
   background-color: #04c2c9;
   color: white;
 }
+
+#projects {
+  padding-bottom: 40px;
+}
 /*# sourceMappingURL=projects.component.css.map */
